fix image so they resize on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -664,9 +664,8 @@ footer a {
   }
 
   .project-image {
-    /* width: 100%;
-    height: auto; */
-    aspect-ratio: 2/1;
+    width: 100%;
+    height: auto;
   }
 
   @media screen and (max-width: 767px) {
